--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 Flask==0.10.1
 Flask-DebugToolbar==0.9.0
 Flask-Login==0.2.11
+Flask-Markdown==0.3
 Flask-Script==2.0.5
 Flask-Scrypt==0.1.3.6
 Flask-WTF==0.9.5
 Jinja2==2.7.3
+Markdown==2.4.1
 MarkupSafe==0.23
 WTForms==1.0.5
 Werkzeug==0.9.6
